Reworked some code in the js file to fix errors and debug, and got the playerSelection and computerSelection to display properly on the page using DOM methods, added more comments

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 </head>
 <body>
 <h1>ROCK PAPER SCISSORS</h1>
-
+<h2>Your Selections</h2>
 <button id="rock">ROCK</button>
 <button id="paper">PAPER</button>
 <button id="scissors">SCISSORS</button>
+<br>
+<h1>Your choice: <span id="player-choice"></span></h1>
+<h1>Computer choice: <span id="comp-choice"></span></h1>
+<h2><span id="result"></span></h2>
 
     
 </body>
