--- a/index.html
+++ b/index.html
@@ -12,15 +12,24 @@
 </head>
 <body>
 <h1>ROCK PAPER SCISSORS</h1>
+<div>
 <h2>Your Selections</h2>
 <button id="rock">ROCK</button>
 <button id="paper">PAPER</button>
 <button id="scissors">SCISSORS</button>
+</div>
 <br>
+<div>
 <h1>Your choice: <span id="player-choice"></span></h1>
 <h1>Computer choice: <span id="comp-choice"></span></h1>
 <h2><span id="result"></span></h2>
-
+<h2>Your score: <span id="player-score"></span></h2>
+<h2>Computer score: <span id="computer-score"></span></h2>
+<h1><span id="end-game-result"></span></h1>
+</div>
+<div>
+    <button id="reset-button">Reset</button>
+</div>
     
 </body>
 </html>
