changed html selections section, and added to the end game function to stop the game from continuing after either player reaches 5 points, and then I added imgs for the selections

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <h1>ROCK PAPER SCISSORS</h1>
 <div>
-<h2>Your Selections</h2>
+<h2>Pick your selection to start game.</h2>
 <button id="rock">ROCK</button>
 <button id="paper">PAPER</button>
 <button id="scissors">SCISSORS</button>
