--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RockPaperScissors</title>
-
-
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles.css">
 <script src="script.js" defer></script>
 </head>
 <body>
 <h1>ROCK PAPER SCISSORS</h1>
-<div>
 <h2>Pick your selection to start game.</h2>
-<button id="rock">ROCK</button>
-<button id="paper">PAPER</button>
-<button id="scissors">SCISSORS</button>
+<div class="container">
+
+<button id="rock"></button>
+<button id="paper"></button>
+<button id="scissors"></button>
 </div>
 <br>
-<div>
+<div class="UI">
 <h1>Your choice: <span id="player-choice"></span></h1>
 <h1>Computer choice: <span id="comp-choice"></span></h1>
 <h2><span id="result"></span></h2>
@@ -28,7 +30,7 @@
 <h1><span id="end-game-result"></span></h1>
 </div>
 <div>
-    <button id="reset-button">Reset</button>
+    <button id="reset-button">Play again?</button>
 </div>
     
 </body>
