deleted png images that I chose not to use, rearranged the computer choice and player choice in the UI, and gave the text a white glowing effect as well for the outside border of the buttons with a glow shadow effect.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </div>
 <br>
 <div class="UI">
-<h1>Your choice: <span id="player-choice"></span></h1>
-<h1>Computer choice: <span id="comp-choice"></span></h1>
+<h1 class="playerChoice">Your choice: <span id="player-choice"></span></h1>
+<h1 class="compChoice">Computer choice: <span id="comp-choice"></span></h1>
 <h2><span id="result"></span></h2>
 <h2>Your score: <span id="player-score"></span></h2>
 <h2>Computer score: <span id="computer-score"></span></h2>
